--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "coolshare",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.11.0",
+    "npm": "6.9.0"
+  },
+  "private": true,
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
@@ -10,7 +15,6 @@
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod"
   },
-  "private": true,
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.800.3",
     "@angular/animations": "^8.0.1",
