Fixed errors causing unsuccessful build

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build --prod",
+    "start": "node ./app.js"
   },
   "dependencies": {
     "@angular-devkit/build-webpack": "^0.800.3",
