--- a/package.json
+++ b/package.json
@@ -32,16 +32,15 @@
     "@ngrx/entity": "^8.0.1",
     "@ngrx/store": "^8.0.1",
     "@ngrx/store-devtools": "^8.0.1",
-    "@types/body-parser": "^1.17.0",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/express": "^4.17.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
+    "css-loader": "^3.0.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "ngrx-store-freeze": "^0.2.4",
@@ -49,18 +48,21 @@
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
+    "style-loader": "^0.23.1",
     "tslib": "^1.9.0",
-    "webpack": "^4.33.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^8.0.2",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular-devkit/build-angular": "^0.800.3",
+    "@angular-devkit/build-angular": "^0.800.4",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
     "@angularclass/hmr": "^2.1.3",
+    "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
