--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "baseUrl": "src",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": false,
     "module": "es2015",
@@ -12,7 +12,7 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": [
-      "../node_modules/@types"
+      "node_modules/@types"
     ],
     "lib": [
       "es2018",
