--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.hmr.ts"
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
