--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod",
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "wp:start": "webpack-dev-server --mode development --config webpack.config.js",
+    "wp:build": "webpack --mode production",
+    "wp:build:dev": "webpack-dev-server --inline --hot --progress --port 8080"
   },
   "dependencies": {
+    "@angular-devkit/architect": "^0.801.1",
     "@angular-devkit/build-webpack": "^0.800.3",
     "@angular/animations": "^8.1.1",
     "@angular/cdk": "^8.1.1",
@@ -28,18 +32,18 @@
     "@angular/platform-browser": "^8.1.1",
     "@angular/platform-browser-dynamic": "^8.1.1",
     "@angular/router": "^8.1.1",
-    "@ngrx/effects": "^8.0.1",
-    "@ngrx/entity": "^8.0.1",
-    "@ngrx/store": "^8.0.1",
-    "@ngrx/store-devtools": "^8.0.1",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/entity": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
+    "@ngrx/store-devtools": "^8.1.0",
     "@types/lodash": "^4.14.136",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "^1.4.4",
-    "core-js": "^2.5.4",
-    "css-loader": "^3.0.0",
+    "core-js": "^2.6.9",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "mime-types": "^2.1.24",
@@ -51,14 +55,13 @@
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
     "serialize-error": "^4.1.0",
-    "style-loader": "^0.23.1",
     "tslib": "^1.9.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^8.0.2",
+    "@angular-builders/custom-webpack": "^8.1.0",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular-devkit/build-angular": "^0.800.4",
+    "@angular-devkit/build-angular": "^0.801.1",
     "@angular/cli": "^8.1.1",
     "@angular/compiler-cli": "^8.1.1",
     "@angular/language-service": "^8.1.1",
@@ -69,7 +72,12 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular-router-loader": "^0.8.5",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^5.2.1",
     "codelyzer": "^5.1.0",
+    "css-loader": "^3.0.0",
+    "html-loader": "^0.5.5",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -77,11 +85,19 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "to-string-loader": "^1.1.5",
+    "ts-loader": "^6.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
+    "write-file-webpack-plugin": "^4.5.0"
   }
 }
