Fixed issue with navigation menu shrinking when content overflows page. Configured upload effect to dispatch tuple Actions (Complete and fetchfoldercontents) when upload is complete. updated folder progress snackbar to display close button when upload is complete

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ngx-toastr": "^10.0.4",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
+    "pretty-file-icons": "^2.2.1",
     "rxjs": "^6.5.2",
     "serialize-error": "^4.1.0",
     "tslib": "^1.9.0",
