Added angular universal for server side rendering. Build was successful; testing deployment on heroku

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,13 @@
                 "/src/*": "${webRoot}/*",
                 "/*": "*",
                 "/./~/*": "${webRoot}/node_modules/*"
-            }
+            },
+            "skipFiles": [
+                "${workspaceFolder}/dist",
+                "${workspaceFolder}/src/environments",
+                "${workspaceFolder}/node_modules/**/*.js",
+                "<node_internals>/**/*.js"
+            ]
         }
     ]
 }
