--- a/package.json
+++ b/package.json
@@ -17,25 +17,32 @@
     "start": "node ./app.js",
     "wp:start": "webpack-dev-server --mode development --config webpack.config.js",
     "wp:build": "webpack --mode production",
-    "wp:build:dev": "webpack-dev-server --inline --hot --progress --port 8080"
+    "wp:build:dev": "webpack-dev-server --inline --hot --progress --port 8080",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run CoolShare:server:production --bundleDependencies all"
   },
   "dependencies": {
     "@angular-devkit/architect": "^0.801.1",
     "@angular-devkit/build-webpack": "^0.800.3",
-    "@angular/animations": "^8.1.1",
+    "@angular/animations": "^8.1.2",
     "@angular/cdk": "^8.1.1",
-    "@angular/common": "^8.1.1",
-    "@angular/compiler": "^8.1.1",
-    "@angular/core": "^8.1.1",
-    "@angular/forms": "^8.1.1",
+    "@angular/common": "^8.1.2",
+    "@angular/compiler": "^8.1.2",
+    "@angular/core": "^8.1.2",
+    "@angular/forms": "^8.1.2",
     "@angular/material": "^8.1.1",
-    "@angular/platform-browser": "^8.1.1",
-    "@angular/platform-browser-dynamic": "^8.1.1",
-    "@angular/router": "^8.1.1",
+    "@angular/platform-browser": "^8.1.2",
+    "@angular/platform-browser-dynamic": "^8.1.2",
+    "@angular/platform-server": "^8.1.2",
+    "@angular/router": "^8.1.2",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/entity": "^8.1.0",
     "@ngrx/store": "^8.1.0",
     "@ngrx/store-devtools": "^8.1.0",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/lodash": "^4.14.136",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
