Enabled compression module on nodejs instance. imported ngx-toastr scss to styles.scss, and removed from angular.json. removed unused angular material modules from material.module

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/animations": "^8.1.2",
     "@angular/cdk": "^8.1.1",
     "@angular/common": "^8.1.2",
-    "@angular/compiler": "^8.1.2",
+    "@angular/compiler": "^8.1.1",
     "@angular/core": "^8.1.2",
     "@angular/forms": "^8.1.2",
     "@angular/material": "^8.1.1",
@@ -43,9 +43,11 @@
     "@ngrx/store-devtools": "^8.1.0",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/compression": "0.0.36",
     "@types/lodash": "^4.14.136",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.9",
     "express": "^4.17.1",
