--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
             ],
             "styles": [
               "src/styles.less",
-              "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
