Stashing current state

--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "@angular/platform-browser-dynamic": "^8.1.2",
     "@angular/platform-server": "^8.1.2",
     "@angular/router": "^8.1.2",
-    "@ngrx/effects": "^8.1.0",
-    "@ngrx/entity": "^8.1.0",
-    "@ngrx/store": "^8.1.0",
-    "@ngrx/store-devtools": "^8.1.0",
+    "@ngrx/effects": "^8.2.0",
+    "@ngrx/entity": "^8.2.0",
+    "@ngrx/store": "^8.2.0",
+    "@ngrx/store-devtools": "^8.2.0",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/compression": "0.0.36",
@@ -59,6 +59,7 @@
     "moment": "^2.24.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "ngrx-store-freeze": "^0.2.4",
+    "ngx-image-cropper": "^1.4.1",
     "ngx-toastr": "^10.0.4",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
