--- a/package.json
+++ b/package.json
@@ -44,21 +44,26 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/compression": "0.0.36",
+    "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.136",
+    "@types/mime": "^2.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.6.9",
     "express": "^4.17.1",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
+    "mime": "^2.4.4",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
     "moment-locales-webpack-plugin": "^1.0.7",
     "ngrx-store-freeze": "^0.2.4",
+    "ngx-filesaver": "^8.0.0",
     "ngx-image-cropper": "^1.4.1",
     "ngx-toastr": "^10.0.4",
     "path": "^0.12.7",
