--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.136",
     "@types/mime": "^2.0.1",
+    "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.4",
@@ -71,7 +72,9 @@
     "pretty-file-icons": "^2.2.1",
     "rxjs": "^6.5.2",
     "serialize-error": "^4.1.0",
+    "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
