--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
+    "webpack": "^4.39.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
