--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "ES5",
+    "target": "es5",
     "typeRoots": [
       "node_modules/@types"
     ],
