--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "handlebars": "^4.4.2",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
@@ -75,6 +76,7 @@
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
+    "webpack-node-externals": "^1.7.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
