migrated to css based styling from bootstrap grid in upload-details, and upload-progress, components. Added method for calculating upload speed when uploading files. Started development of effects in upload.effects for pausing/resuming, and cancelling file uploads

--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "popper.js": "^1.15.0",
     "pretty-file-icons": "^2.2.1",
     "rxjs": "^6.5.2",
+    "rxjs-tslint": "^0.1.7",
+    "rxjs-tslint-rules": "^4.25.0",
     "serialize-error": "^4.1.0",
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
@@ -114,7 +116,7 @@
     "to-string-loader": "^1.1.5",
     "ts-loader": "^6.0.4",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.5.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
